# poc-template

./: .env.example  Cargo.toml  README.md
backend/: Cargo.toml  build.rs
backend/src/: goodbye.rs  hello.rs  server.rs
client/: Cargo.toml
client/src/: goodbye.rs  hello.rs  lib.rs
db/migrations/: 20230830034550_log-table.sql
frontend/: Cargo.toml
frontend/src/: main.rs
gateway/: go.mod  go.sum  main.go
gateway/internal/: goodbye.pb.go  goodbye.pb.gw.go  goodbye_grpc.pb.go  hello.pb.go  hello.pb.gw.go  hello_grpc.pb.go
gateway/openapi/api/v1/: goodbye.swagger.json  hello.swagger.json
proto/: buf.gen.yaml  buf.yaml  goodbye.proto  hello.proto
