[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]] 
name = "server"
path = "src/server.rs"

[dependencies]
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.3", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "migrate", "sqlite" ] }

[build-dependencies]
tonic-build = "0.9"